# oread

./: .gitignore  CLAUDE.md  README.md  cli.py  oread_evolution_spec.md  oread_qa_findings.md  pyproject.toml  server.py  test_full_features.py  test_stress.py
.claude/: PROJECT_WORKLIST.md
.claude/sessions/2025-12-25/: CHANGELOG.md  METRICS.txt  SESSION_SUMMARY.md
.claude/sessions/2025-12-26/: CHANGELOG.md  METRICS.txt  (+1 more)
adult/: INTEGRATION_GUIDE.md  adult_conditions.yaml  adult_disease_arcs.yaml  adult_engine.py
ctocc/: TIME_TRAVEL_CONDITIONS.md  TIME_TRAVEL_IMPLEMENTATION.md  time-travel-mockup.jsx
database/: schema.sql
demo/: 27d6e387_patient.json  27d6e387_patient.xml
demo/ccda_exports/: patient_1_Benjamin_Smith.xml  patient_1_Emily_Jones.xml  patient_2_Sophia_Thomas.xml  patient_3_Henry_Martinez.xml  patient_4_Isabella_Brown.xml  patient_5_Mila_Harris.xml
docs/: ARCHITECTURE.md  ARCHITECTURE_REFERENCE.md  CONDITION_SCHEMA.md  LEARNING_PLATFORM_PLAN.md  QUICKSTART.md  ROADMAP.md  SUPABASE_SETUP.md  TIME_TRAVEL_DESIGN.md
knowledge/: __init__.py
knowledge/conditions/: _schema.yaml  conditions.yaml  disease_arcs.yaml
knowledge/growth/: __init__.py  cdc_2000.py
knowledge/immunizations/: aap_schedule.yaml
scripts/: README.md  ccda_summary.py  generate_scripted_patient.py
src/: __init__.py  athena_client.py
src/auth/: __init__.py  middleware.py
src/db/: __init__.py  client.py  repositories.py
src/engines/: __init__.py  engine.py  messiness.py
src/exporters/: __init__.py  ccda.py  context_export.py  fhir.py  json_export.py  markdown.py
src/knowledge/: __init__.py  cache.py  condition_service.py  exa_client.py  models.py
src/llm/: __init__.py  client.py
src/models/: __init__.py  patient.py  user.py
src/reconciliation/: __init__.py  claim_extractor.py  models.py  reconciler.py
src/validators/: __init__.py  models.py  patient_validator.py
tests/: test_age_gates.py  test_integration.py
web/: fonts.html  index.html
(+10 files in other folders)
